@@ -1,3 +1,10 @@
+2011-05-02  Christophe Coutand  <ecos@hotmail.co.uk>
+
+	* cdl/adc_stm32.cdl:
+	* src/adc_stm32.c:
+	Make sure DMA clock is enabled. Fix ADC clock divider not set in
+	stm32_adc_init_clock.
+
 2009-03-05  Simon Kallweit  <simon.kallweit@intefo.ch>
 
 	* src/adc_stm32.c:
@@ -15,7 +22,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 2009 Free Software Foundation, Inc.                        
+// Copyright (C) 2009, 2011 Free Software Foundation, Inc.                  
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
